--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,17 +6,23 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>SearchLinks</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-    <body bgcolor="#8CC6C5">
+    <style>
+    .btn btn-primary{
+        max-block-size: 1000px;
+    }
+    </style>
+    <body style="background-color :rgb(245, 245, 173)">
         <form method="post" action="/search">
-            </br></br></br></br></br></br></br></br></br></br></br>
+            </br></br></br></br></br></br></br></br>
             <center>
-                <h1><font size="18">Search in Popular websites</font></h1>
-                <input type="text" name="t1" size="50" ></br><br>
-                <input type="submit" value="submit" size="50">
+                <h1><font size="18">Search in Popular websites</font></h1></br>
+                <input type="text" name="t1" size="50" height="100" width="100" style=" font-size: 18px; border-radius: 50px " placeholder="Search Here or Typr here"></br></br>
+                <button type="submit" class="btn btn-primary" style="font-size: 23px">Search</button>
             </center>
         </form>
     </body>
