--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,16 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>JSP Page</title>
+        <title>SearchLinks</title>
   
     </head>
-    <body  bgcolor="#DBEBE9" >
+    <body style="background-color:snow">
 <h1><font size="24">Some Popular WebSites</font></h1><br>
 <style>
+
+a {
+    text-decoration: none;
+}
 t.pos_fixed{
 position: fixed;
 top: 150px;
@@ -17,12 +21,12 @@ left: 100px;
 </style>
 
 <table class="pos_fixed">
- <tr><td><h3><a href="<%= typeof google=='undefined'? '' : google  %>"  target="_blank"><img class="pos_fixed" src=" google.jpg" style="width:60px;height:60px;text-decoration:none;" />&nbsp;&nbsp;<font class="pos_fixed" size="auto">Google</font></h3></a></td></th> 
-<tr><td><h3><a href="<%= typeof bing=='undefined'? '' : bing  %>" target="_blank"><img class="pos_fixed" src="bing.png" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="auto" >bing</font></h3></a></td></th>
-<tr><td><h3><a href="<%= typeof wiki=='undefined'? '' : wiki  %>" target="_blank"><img class="pos_fixed" src=" wikipedia.png" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="auto">Wikipedia</font></h3></a></td></th>
-<tr><td><h3><a href="<%= typeof youtube=='undefined'? '' : youtube  %>" target="_blank"><img src=" youtube.jpeg" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="auto"  >youtube</font></h3></a></td></th>
-<tr><td><h3><a href="<%= typeof yahoo=='undefined'? '' : yahoo  %>" target="_blank"><img src=" yahoo.jpg" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="auto">yahoo</font></h3></a></td></th></tr>
-<tr><td><h3><a href="<%= typeof duckduckgo=='undefined'? '' : duckduckgo  %>" target="_blank"><img src=" duckduckgo.png" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="auto">DuckDuckGo</font></h3></a></td></th>
+<tr><td  style="text-decoration-style: none"><h3><a href="<%= typeof google=='undefined'? '' : google  %>"  target="_blank"><img class="pos_fixed" src=" google.jpg" style="width:60px;height:60px;text-decoration:none;" />&nbsp;&nbsp;<font class="pos_fixed" size="7px" >Google</font></h3></a></td></th> 
+<tr><td><h3><a href="<%= typeof bing=='undefined'? '' : bing  %>" target="_blank"><img class="pos_fixed" src="bing.png" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="7px" style="text-decoration:none" >bing</font></h3></a></td></th>
+<tr><td><h3><a href="<%= typeof wiki=='undefined'? '' : wiki  %>" target="_blank"><img class="pos_fixed" src=" wikipedia.png" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="7px" style="text-decoration:none">Wikipedia</font></h3></a></td></th>
+<tr><td><h3><a href="<%= typeof youtube=='undefined'? '' : youtube  %>" target="_blank"><img src=" youtube.jpeg" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="7px" style="text-decoration:none" >youtube</font></h3></a></td></th>
+<tr><td><h3><a href="<%= typeof yahoo=='undefined'? '' : yahoo  %>" target="_blank"><img src=" yahoo.jpg" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="7px" style="text-decoration:none">yahoo</font></h3></a></td></th></tr>
+<tr><td><h3><a href="<%= typeof duckduckgo=='undefined'? '' : duckduckgo  %>" target="_blank"><img src=" duckduckgo.png" style="width:60px;height:60px;"/>&nbsp;&nbsp;<font size="7px" style="text-decoration:none">DuckDuckGo</font></h3></a></td></th>
 </table>
 
 </body>
