--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@ and open the template in the editor.
         <form method="post" action="/search">
             </br></br></br></br></br></br></br></br>
             <center>
-                <h1><font size="18">Search in Popular websites</font></h1></br>
+                <h1 style="background-position: center"><font size="18">Search in Popular websites</font></h1></br>
                <input type="text" name="t1" size="50"  style=" font-size: 18px ;height :50px ; border-radius: 50px ; width: fit-content " placeholder="Search Here or Typr here"></br></br>
                 <button type="submit" class="btn btn-primary" style="font-size: 23px">Search</button>
             </center>
