--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>SearchLinks</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,8 +20,8 @@ and open the template in the editor.
         <form method="post" action="/search">
             </br></br></br></br></br></br></br></br>
             <center>
-                <h1><font size="18">Search in Popular websites</font></h1></br>
-                <input type="text" name="t1" size="50" height="100" width="100" style=" font-size: 18px; border-radius: 50px " placeholder="Search Here or Typr here"></br></br>
+                <h1 style="background-position: center"><font size="18" >Search in Popular websites</font></h1></br>
+                <input type="text" name="t1"  style=" font-size: 18px ;height :50px; size : 45; border-radius: 50px ; width: fit-content " placeholder="Search Here or Typr here"></br></br>
                 <button type="submit" class="btn btn-primary" style="font-size: 23px">Search</button>
             </center>
         </form>
